front page latest from Brathaban

--- a/Front Page/new.html
+++ b/Front Page/new.html
@@ -9,7 +9,7 @@
 	
 	  <link rel="stylesheet" href="design.css">
 </head>
-<body background-color = "#817F7E" >
+<body>
 <h1 align = "center">HOME PAGE<center><h6>PHP Pharmacy</center></h6>
 <br/><br/><br/>
 <button type="button" style="height:70px;width:140px">Add sales</button><br/><br/>
