latest homepage by brath
latest homepage by brathaban
Thanks

--- a/Front Page/new.html
+++ b/Front Page/new.html
@@ -11,13 +11,13 @@
 </head>
 <body>
 <h1 align = "center">HOME PAGE<center><h6>PHP Pharmacy</center></h6>
-<br/><br/><br/>
-<button type="button" style="height:70px;width:140px">Add sales</button><br/><br/>
-<div><button type="button" style="height:70px;width:140px">Sales record</button>
+<br/>
+&nbsp; &nbsp; &nbsp;<button type="button" style="height:70px;width:140px">Add sales</button><br/><br/>
+<div>&nbsp; &nbsp; &nbsp;<button type="button" style="height:70px;width:140px">Sales record</button>
 
 <center><img src="abc.png" alt="Girl in a jacket" width="100" height="100" ></center>
 </div>
 <br/><br/>
-<button type="button" style="height:70px;width:140px">stock list</button><br><br/>
-<button type="button" style="height:70px;width:140px">view sales report</button><br/><br/>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+&nbsp; &nbsp; &nbsp;<button type="button" style="height:70px;width:140px">stock list</button><br><br/>
+&nbsp; &nbsp; &nbsp;<button type="button" style="height:70px;width:140px">view sales report</button><br/><br/>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 
