Front page - Brathaban
front page brathaban

--- a/Front Page/new.html
+++ b/Front Page/new.html
@@ -10,7 +10,7 @@
 	  <link rel="stylesheet" href="design.css">
 </head>
 <body>
-<h1 align = "center">HOME PAGE<center><h6>PHP Pharmacy</center></h6>
+<h1 align = "center">HOME PAGE<center><h6>---PHP Pharmacy---</center></h6>
 <br/>
 &nbsp; &nbsp; &nbsp;<button type="button" style="height:70px;width:140px">Add sales</button><br/><br/>
 <div>&nbsp; &nbsp; &nbsp;<button type="button" style="height:70px;width:140px">Sales record</button>
