--- a/Front Page/php.html
+++ b/Front Page/php.html
@@ -8,6 +8,7 @@
 	<meta name = "author"  content = "Brathaban"/>
 	
 	  <link rel="stylesheet" href="design.css">
+	   <script src="script.js"></script>
 </head>
 <body>
 	<h1><a href="home.html">PHP Pharmacy</a></h1>
@@ -15,11 +16,11 @@
 	<hr>
 	<br/>
 	<div class="button">
-	<button type="button">Add sales</button><br/>
-	<button type="button">Sales record</button><br/>
+	<button type="button" onclick ="button1_click()">Add sales</button><br/>
+	<button type="button" onclick ="button2_click()">Sales record</button><br/>
 
 <!--<center><img src="abc.png" alt="Girl in a jacket" width="100" height="100" ></center>-->
 
-	<button type="button" >Stock list</button><br/>
-	<button type="button" >View sales report</button><br/><br/>
+	<button type="button" onclick ="button3_click()">Stock list</button><br/>
+	<button type="button" onclick ="button4_click()">View sales report</button><br/><br/>
 	</div>
