PHP Pages Home page
Home Page

--- a/PHP Pharmacy pages/Home.html
+++ b/PHP Pharmacy pages/Home.html
@@ -11,7 +11,7 @@
 	  <script src="script.js"></script>
 </head>
 <body>
-<h1 align = "center">HOME PAGE<center><h6>---PHP Pharmacy---</center></h6>hai
+<h1 align = "center">HOME PAGE<center><h6>---PHP Pharmacy---</center></h6>
 <br/>
 &nbsp; &nbsp; &nbsp;<button type="button" style="height:70px;width:140px" onclick ="button1_click()">Add sales</button><br/><br/>
 <div>&nbsp; &nbsp; &nbsp;<button type="button" style="height:70px;width:140px" onclick ="button2_click()">Sales record</button>
