Javascript best practice- better way
Javascript best practice - better way

--- a/PHP Pharmacy pages/Home.html
+++ b/PHP Pharmacy pages/Home.html
@@ -8,7 +8,7 @@
 	<meta name = "author"  content = "Brathaban"/>
 	
 	  <link rel="stylesheet" href="design.css">
-	  <script src="script.js"></script>
+	  
 </head>
 <body>
 <h1 align = "center">HOME PAGE<center><h6>---PHP Pharmacy---</center></h6>
@@ -20,6 +20,24 @@
 </div>
 <br/><br/>
 &nbsp; &nbsp; &nbsp;<button type="button" style="height:70px;width:140px" onclick ="button3_click()">stock list</button><br><br/>
-&nbsp; &nbsp; &nbsp;<button type="button" style="height:70px;width:140px" onclick ="button4_click()">view sales report</button><br/><br/>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+&nbsp; &nbsp; &nbsp;<button type="button" style="height:70px;width:140px" id = "button4">view sales report</button><br/><br/>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+
+<script src="script.js"></script>
+
+
+
+
+
+
+<p>This example uses the addEventListener() method to attach a "click" event to a p element.</p>
+
+<p id="button">Click me.</p>
+
+
+
+
+
+
+
 </body>
 </html>
