--- a/PHP Pharmacy pages/php.html
+++ b/PHP Pharmacy pages/php.html
@@ -8,7 +8,7 @@
 	<meta name = "author"  content = "Brathaban"/>
 	
 	  <link rel="stylesheet" href="design.css">
-	   <script src="script.js"></script>
+	  
 </head>
 <body>
 	<h1><a href="home.html">PHP Pharmacy</a></h1>
@@ -22,5 +22,8 @@
 <!--<center><img src="abc.png" alt="Girl in a jacket" width="100" height="100" ></center>-->
 
 	<button type="button" onclick ="button3_click()">Stock list</button><br/>
-	<button type="button" onclick ="button4_click()">View sales report</button><br/><br/>
+	<button type="button" onclick ="button4_click()" id = "button4">View sales report</button><br/><br/>
 	</div>
+	
+	
+	 <script src="script.js"></script>
