add item button made working
add item button made working

--- a/Home.html
+++ b/Home.html
@@ -20,7 +20,7 @@
 </div>
 <br/><br/>
 &nbsp; &nbsp; &nbsp;<button type="button" style="height:70px;width:140px" onclick ="button3_click()">stock list</button><br><br/>
-&nbsp; &nbsp; &nbsp;<button type="button" style="height:70px;width:140px" id = "button4">view sales report</button><br/><br/>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+&nbsp; &nbsp; &nbsp;<button type="button" style="height:70px;width:140px" onclick ="button4_click()" id = "button4">view sales report</button><br/><br/>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 
 <script src="script.js"></script>
 
