--- a/add_sale.html
+++ b/add_sale.html
@@ -55,10 +55,16 @@ font-size: 16px;
 
 <footer>
 <p>
-<button style="background-color: lightyellow;"  type="reset" value="reset">Add Item</button>
+<button style="background-color: lightyellow;"  type="reset" value="reset" id ="additem">Add Item</button>
 <button  style="background-color: lightyellow;"type="submit" value="Submit">Submit</button>
+
+
+
 </p>
 </footer>
+
+
+<script src="script.js"></script>           
 </body>
 </fieldset>
 
