Javascript implementation Done--- all navigatiion buttons are functional
Javascript implementation Done--- all navigation buttons are functional

--- a/PHP Pharmacy pages/sales_records_page.html
+++ b/PHP Pharmacy pages/sales_records_page.html
@@ -13,10 +13,10 @@
       <h1>Sales Records</h1>
     </header>
     <aside>
-      <button type="button" class="btn" >Add Sales</button>
-      <button type="button" class="btn" >Sales Records</button>
-      <button type="button" class="btn" >Stock List</button>
-      <button type="button" class="btn" >View Sales Report</button>
+      <button type="button" class="btn" id = "addsales">Add Sales</button>
+      <button type="button" class="btn" id = "salesrecords">Sales Records</button>
+      <button type="button" class="btn" id = "stocklist">Stock List</button>
+      <button type="button" class="btn" id = "viewsalesreport">View Sales Report</button>
     </aside>
     <main>
       <div class="grid-container">
@@ -132,5 +132,6 @@
         </div>
       </div>
     </main>
+	<script src="script.js"></script>
   </body>
 </html>
