--- a/PHP Pharmacy pages/stock_list_page.html
+++ b/PHP Pharmacy pages/stock_list_page.html
@@ -13,10 +13,10 @@
       <h1>Stock List</h1>
     </header>
     <aside>
-      <button type="button" class="btn" >Add Sales</button>
-      <button type="button" class="btn">Sales Records</button>
-      <button type="button" class="btn" >Stock List</button>
-      <button type="button" class="btn" >View Sales Report</button>
+      <button type="button" class="btn" onclick = "button5_click()">Add Sales</button>
+      <button type="button" class="btn" onclick = "button6_click()">Sales Records</button>
+      <button type="button" class="btn" onclick = "button7_click()">Stock List</button>
+      <button type="button" class="btn" onclick = "button8_click()">View Sales Report</button>
     </aside>
     <main>
       <div class="grid-container">
@@ -80,5 +80,6 @@
         </div>
       </div>
     </main>
+	<script src="script.js"></script>
   </body>
 </html>
