Title of the web page added
Title was missing, added

--- a/PHP Pharmacy pages/add_item.html
+++ b/PHP Pharmacy pages/add_item.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset ="utf-8">
 	<link rel="stylesheet" href="./add_item.css">
+	<title> Add Item </title>
 </head>
 <body>
 	<h1> Add Details</h1>
