--- a/PHP Pharmacy pages/add_item.html
+++ b/PHP Pharmacy pages/add_item.html
@@ -6,7 +6,7 @@
 	<title> Add Item </title>
 </head>
 <body>
-	<h1> Add Details</h1>
+	<h1> Add Item</h1>
 		<form class="form-container">
 			<div class="form-item item-left">
 				<label>Item Name </label>
